--- a/application.properties
+++ b/application.properties
@@ -4,3 +4,5 @@ app.grails.version=2.1.1
 app.name=Coexpress
 app.version=0.1
 plugins.twitter-bootstrap=2.2.2
+jquery.plugins.progressbar=jquery.arbor.js
+jquery.plugins.progressbar=jquery.arbor-tween.js
