--- a/application.properties
+++ b/application.properties
@@ -1,7 +1,8 @@
 #Grails Metadata file
-#Thu Jan 24 13:36:07 EST 2013
+#Wed Feb 13 11:20:00 EST 2013
 app.grails.version=2.1.1
 app.name=Coexpress
-app.version=0.1
+app.version=1.0.2
 jquery.plugins.progressbar=jquery.arbor-tween.js
+plugins.spring-security-core=1.2.7.3
 plugins.twitter-bootstrap=2.2.2
